--- a/test/test.html
+++ b/test/test.html
@@ -75,8 +75,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>B) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
-<select name="s4q2">
+<p>A) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<select name="s4q1">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -100,7 +100,20 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>C) SELECT WHERE EXTENSION ENDS (normal endpoint is 30)<br><br>
+<p>B) SELECT WHERE EXTENSION ENDS (normal endpoint is 30)<br><br>
+<select name="s4q2">
+<option value="0">0</option>
+<option value="5">5</option>
+<option value="10">10</option>
+<option value="15">15</option>
+<option value="20">20</option>
+<option value="25">25</option>
+<option value=">=30">>=30</option>
+</select>
+</p>
+</div>
+<div class="inner-wrap">
+<p>C) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
 <select name="s4q3">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -113,7 +126,7 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>D) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<p>D) SELECT WHERE RIGHT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
 <select name="s4q4">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -126,7 +139,7 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>E) SELECT WHERE RIGHT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
+<p>E) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
 <select name="s4q5">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -139,7 +152,7 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>F) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<p>F) SELECT WHERE LEFT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
 <select name="s4q6">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -152,7 +165,7 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>G) SELECT WHERE LEFT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
+<p>G) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
 <select name="s4q7">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -165,7 +178,7 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>H) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<p>H) SELECT WHERE RIGHT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
 <select name="s4q8">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -178,7 +191,7 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>I) SELECT WHERE RIGHT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
+<p>I) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
 <select name="s4q9">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -191,7 +204,7 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>J) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<p>J) SELECT WHERE LEFT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
 <select name="s4q10">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -204,7 +217,7 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>K) SELECT WHERE LEFT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
+<p>K) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
 <select name="s4q11">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -217,8 +230,41 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>L) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
-<select name="s4q12">
+<p>L) IF ROM FOR THIS VETERAN DOES NOT CONFORM TO THE NORMAL RANGE OF MOTION IDENTIFIED ABOVE BUT IS NORMAL FOR THIS
+VETERAN (for reasons other than a back condition, such as age, body habitus, neurologic disease), EXPLAIN<br><br>
+<textarea name="s4q12"></textarea>
+</p>
+</div>
+<br><hr><br>
+<div class="section"><span>5</span>ROM MEASUREMENT AFTER REPETITIVE-USE TESTING</div><br>
+<div class="inner-wrap">
+<p>A) SELECT WHERE POST-TEST FORWARD FLEXION ENDS<br><br>
+<select name="s5q1">
+<option value="0">0</option>
+<option value="5">5</option>
+<option value="10">10</option>
+<option value="15">15</option>
+<option value="20">20</option>
+<option value="25">25</option>
+<option value="30">30</option>
+<option value="35">35</option>
+<option value="40">40</option>
+<option value="45">45</option>
+<option value="50">50</option>
+<option value="55">55</option>
+<option value="60">60</option>
+<option value="65">65</option>
+<option value="70">70</option>
+<option value="75">75</option>
+<option value="80">80</option>
+<option value="85">85</option>
+<option value=">=90">>=90</option>
+</select>
+</p>
+</div>
+<div class="inner-wrap">
+<p>B) SELECT WHERE POST-TEST EXTENSION ENDS:<br><br>
+<select name="s5q2">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -227,41 +273,6 @@
 <option value="25">25</option>
 <option value=">=30">>=30</option>
 </select>
-</p>
-</div>
-<div class="inner-wrap">
-<p>M) IF ROM FOR THIS VETERAN DOES NOT CONFORM TO THE NORMAL RANGE OF MOTION IDENTIFIED ABOVE BUT IS NORMAL FOR THIS
-VETERAN (for reasons other than a back condition, such as age, body habitus, neurologic disease), EXPLAIN<br><br>
-<textarea name="s4q13"></textarea>
-</p>
-</div>
-<br><hr><br>
-<div class="section"><span>5</span>ROM MEASUREMENT AFTER REPETITIVE-USE TESTING</div><br>
-<div class="inner-wrap">
-<p>A) SELECT WHERE POST-TEST FORWARD FLEXION ENDS<br><br>
-<label><input type="checkbox" name="s5q1" value="0">0</label>
-<label><input type="checkbox" name="s5q1" value="5">5</label>
-<label><input type="checkbox" name="s5q1" value="10">10</label>
-<label><input type="checkbox" name="s5q1" value="15">15</label>
-<label><input type="checkbox" name="s5q1" value="20">20</label>
-<label><input type="checkbox" name="s5q1" value="25">25</label>
-<label><input type="checkbox" name="s5q1" value="30">30</label>
-<label><input type="checkbox" name="s5q1" value="35">35</label>
-<label><input type="checkbox" name="s5q1" value="40">40</label>
-<label><input type="checkbox" name="s5q1" value="45">45</label>
-<label><input type="checkbox" name="s5q1" value="50">50</label>
-<label><input type="checkbox" name="s5q1" value="55">55</label>
-<label><input type="checkbox" name="s5q1" value="60">60</label>
-<label><input type="checkbox" name="s5q1" value="65">65</label>
-<label><input type="checkbox" name="s5q1" value="70">70</label>
-<label><input type="checkbox" name="s5q1" value="75">75</label>
-<label><input type="checkbox" name="s5q1" value="80">80</label>
-<label><input type="checkbox" name="s5q1" value="85">85</label>
-<label><input type="checkbox" name="s5q1" value=">=90">>=90</label>
-</p>
-</div>
-<div class="inner-wrap">
-<p>B) SELECT WHERE POST-TEST EXTENSION ENDS:<br><br>
 </p>
 </div>
 <div class="inner-wrap">
@@ -279,12 +290,28 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 </div>
 <div class="inner-wrap">
 <p>D) SELECT WHERE POST-TEST LEFT LATERAL FLEXION ENDS<br><br>
-<label><input type="radio" name="s5q4" value="YES">YES</label>
-<label><input type="radio" name="s5q4" value="NO">NO</label>
+<select name="s5q4">
+<option value="0">0</option>
+<option value="5">5</option>
+<option value="10">10</option>
+<option value="15">15</option>
+<option value="20">20</option>
+<option value="25">25</option>
+<option value=">=30">>=30</option>
+</select>
 </p>
 </div>
 <div class="inner-wrap">
 <p>E) SELECT WHERE POST-TEST RIGHT LATERAL ROTATION ENDS<br><br>
+<select name="s5q5">
+<option value="0">0</option>
+<option value="5">5</option>
+<option value="10">10</option>
+<option value="15">15</option>
+<option value="20">20</option>
+<option value="25">25</option>
+<option value=">=30">>=30</option>
+</select>
 </p>
 </div>
 <div class="inner-wrap">
