--- a/test/test.html
+++ b/test/test.html
@@ -13,45 +13,45 @@
 <div class="section"><span>1</span>Diagnosis</div><br>
 <div class="inner-wrap">
 <p>A) DOES THE VETERAN NOW HAVE OR HAS HE/SHE EVER BEEN DIAGNOSED WITH A THORACOLUMBAR SPINE (back) CONDITION?<br><br>
-<label><input type="radio" name="s1q1" value="YES">YES</label>
-<label><input type="radio" name="s1q1" value="NO">NO</label>
+<label><input type="radio" name="s1qa" value="YES">YES</label>
+<label><input type="radio" name="s1qa" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
 <p>B) PROVIDE ONLY DIAGNOSIS THAT PERTAIN TO THORACOLUMBAR SPINE (back) CONDITIONS<br><br>
-<textarea name="s1q2"></textarea>
+<textarea name="s1qb"></textarea>
 </p>
 </div>
 <div class="inner-wrap">
 <p>C) IF THERE ARE ADDITIONAL DIAGNOSES THAT PERTAIN TO THORACOLUMBAR SPINE (back) CONDITIONS, LIST USING ABOVE FORMAT<br><br>
-<textarea name="s1q3"></textarea>
+<textarea name="s1qc"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>2</span>Medical History</div><br>
 <div class="inner-wrap">
 <p>A) DESCRIBE THE HISTORY (including onset and course) OF THE VETERAN'S THORACOLUMBAR SPINE (back) CONDITION (brief summary)<br><br>
-<textarea name="s2q1"></textarea>
+<textarea name="s2qa"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>3</span>FLARE-UPS</div><br>
 <div class="inner-wrap">
 <p>A) DOES THE VETERAN REPORT THAT FLARE-UPS IMPACT THE FUNCTION OF THE THORACOLUMBAR SPINE (back)?<br><br>
-<label><input type="radio" name="s3q1" value="YES">YES</label>
-<label><input type="radio" name="s3q1" value="NO">NO</label>
+<label><input type="radio" name="s3qa" value="YES">YES</label>
+<label><input type="radio" name="s3qa" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
 <p>B) IF YES, DOCUMENT THE VETERAN'S DESCRIPTION OF THE IMPACT OF FLARE-UPS IN HIS OR HER OWN WORDS<br><br>
-<textarea name="s3q2"></textarea>
+<textarea name="s3qb"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>4</span>INITIAL RANGE OF MOTION (ROM) MEASUREMENTS</div><br>
 <div class="inner-wrap">
-<p>A) SELECT WHERE FORWARD FLEXION ENDS (normal endpoint is 90)<br><br>
-<select name="s4q1">
+<p>A1) SELECT WHERE FORWARD FLEXION ENDS (normal endpoint is 90)<br><br>
+<select name="s4qa1">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -75,8 +75,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>A) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
-<select name="s4q1">
+<p>A2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<select name="s4qa2">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -100,8 +100,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>B) SELECT WHERE EXTENSION ENDS (normal endpoint is 30)<br><br>
-<select name="s4q2">
+<p>B1) SELECT WHERE EXTENSION ENDS (normal endpoint is 30)<br><br>
+<select name="s4qb1">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -113,8 +113,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>C) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
-<select name="s4q3">
+<p>B2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<select name="s4qb2">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -126,8 +126,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>D) SELECT WHERE RIGHT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
-<select name="s4q4">
+<p>C1) SELECT WHERE RIGHT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
+<select name="s4qc1">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -139,8 +139,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>E) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
-<select name="s4q5">
+<p>C2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<select name="s4qc2">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -152,8 +152,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>F) SELECT WHERE LEFT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
-<select name="s4q6">
+<p>D1) SELECT WHERE LEFT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
+<select name="s4qd1">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -165,8 +165,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>G) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
-<select name="s4q7">
+<p>D2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<select name="s4qd2">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -178,8 +178,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>H) SELECT WHERE RIGHT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
-<select name="s4q8">
+<p>E1) SELECT WHERE RIGHT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
+<select name="s4qe1">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -191,8 +191,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>I) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
-<select name="s4q9">
+<p>E2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<select name="s4qe2">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -204,8 +204,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>J) SELECT WHERE LEFT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
-<select name="s4q10">
+<p>F1) SELECT WHERE LEFT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
+<select name="s4qf1">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -217,8 +217,8 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>K) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
-<select name="s4q11">
+<p>F2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<select name="s4qf2">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -230,16 +230,16 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>L) IF ROM FOR THIS VETERAN DOES NOT CONFORM TO THE NORMAL RANGE OF MOTION IDENTIFIED ABOVE BUT IS NORMAL FOR THIS
+<p>G) IF ROM FOR THIS VETERAN DOES NOT CONFORM TO THE NORMAL RANGE OF MOTION IDENTIFIED ABOVE BUT IS NORMAL FOR THIS
 VETERAN (for reasons other than a back condition, such as age, body habitus, neurologic disease), EXPLAIN<br><br>
-<textarea name="s4q12"></textarea>
+<textarea name="s4qg"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>5</span>ROM MEASUREMENT AFTER REPETITIVE-USE TESTING</div><br>
 <div class="inner-wrap">
 <p>A) SELECT WHERE POST-TEST FORWARD FLEXION ENDS<br><br>
-<select name="s5q1">
+<select name="s5qa">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -264,7 +264,7 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 </div>
 <div class="inner-wrap">
 <p>B) SELECT WHERE POST-TEST EXTENSION ENDS:<br><br>
-<select name="s5q2">
+<select name="s5qb">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -277,7 +277,7 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 </div>
 <div class="inner-wrap">
 <p>C) SELECT WHERE POST-TEST RIGHT LATERAL FLEXION ENDS<br><br>
-<select name="s5q3">
+<select name="s5qc">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -290,7 +290,7 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 </div>
 <div class="inner-wrap">
 <p>D) SELECT WHERE POST-TEST LEFT LATERAL FLEXION ENDS<br><br>
-<select name="s5q4">
+<select name="s5qd">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -303,7 +303,7 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 </div>
 <div class="inner-wrap">
 <p>E) SELECT WHERE POST-TEST RIGHT LATERAL ROTATION ENDS<br><br>
-<select name="s5q5">
+<select name="s5qe">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -316,7 +316,7 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 </div>
 <div class="inner-wrap">
 <p>F) SELECT WHERE POST-TEST LEFT LATERAL ROTATION ENDS<br><br>
-<select name="s5q6">
+<select name="s5qf">
 <option value="0">0</option>
 <option value="5">5</option>
 <option value="10">10</option>
@@ -331,54 +331,54 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 <div class="section"><span>6</span>FUNCTIONAL LOSS AND ADDITIONAL LIMITATION IN ROM</div><br>
 <div class="inner-wrap">
 <p>A) DOES THE VETERAN HAVE ADDITIONAL LIMITATION IN ROM OF THE THORACOLUMBAR SPINE (back) FOLLOWING REPETITIVE-USE TESTING?<br><br>
-<label><input type="radio" name="s6q1" value="YES">YES</label>
-<label><input type="radio" name="s6q1" value="NO">NO</label>
+<label><input type="radio" name="s6qa" value="YES">YES</label>
+<label><input type="radio" name="s6qa" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
 <p>B) DOES THE VETERAN HAVE ANY FUNCTIONAL LOSS AND/OR FUNCTIONAL IMPAIRMENT OF THE THORACOLUMBAR SPINE (back)?<br><br>
-<label><input type="radio" name="s6q2" value="YES">YES</label>
-<label><input type="radio" name="s6q2" value="NO">NO</label>
+<label><input type="radio" name="s6qb" value="YES">YES</label>
+<label><input type="radio" name="s6qb" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
 <p>C) IF THE VETERAN HAS FUNCTIONAL LOSS, FUNCTIONAL IMPAIRMENT AND/OR ADDITIONAL LIMITATION OF ROM OF THE THORACOLUMBAR SPINE (back) AFTER REPETITIVE USE, INDICATE THE CONTRIBUTING FACTORS OF DISABILITY BELOW:<br><br>
-<textarea name="s6q3"></textarea>
+<textarea name="s6qc"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>7</span>PAIN AND MUSCLE SPASM</div><br>
 <div class="inner-wrap">
 <p>A) DOES THE VETERAN HAVE LOCALIZED TENDERNESS OR PAIN TO PALPATION FOR JOINTS AND/OR SOFT TISSUE OF THE THORACOLUMBAR SPINE (back)?<br><br>
-<label><input type="radio" name="s7q1" value="YES">YES</label>
-<label><input type="radio" name="s7q1" value="NO">NO</label>
+<label><input type="radio" name="s7qa" value="YES">YES</label>
+<label><input type="radio" name="s7qa" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
 <p>B) <br><br>
-<textarea name="s7q2"></textarea>
+<textarea name="s7qb"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>8</span>MUSCLE STRENGTH TESTING</div><br>
 <div class="inner-wrap">
-<p>A) <br><br>
-<textarea name="s8q1"></textarea>
+<p>A1) <br><br>
+<textarea name="s8qa1"></textarea>
+</p>
+</div>
+<div class="inner-wrap">
+<p>A2) <br><br>
+<textarea name="s8qa2"></textarea>
+</p>
+</div>
+<div class="inner-wrap">
+<p>A3) <br><br>
+<textarea name="s8qa3"></textarea>
 </p>
 </div>
 <div class="inner-wrap">
 <p>B) <br><br>
-<textarea name="s8q2"></textarea>
-</p>
-</div>
-<div class="inner-wrap">
-<p>C) <br><br>
-<textarea name="s8q3"></textarea>
-</p>
-</div>
-<div class="inner-wrap">
-<p>D) <br><br>
-<textarea name="s8q4"></textarea>
+<textarea name="s8qb"></textarea>
 </p>
 </div>
 <br><br>
