--- a/test/test.html
+++ b/test/test.html
@@ -12,45 +12,49 @@
 <form action="" method="post" id="form">
 <div class="section"><span>1</span>Diagnosis</div><br>
 <div class="inner-wrap">
-<p>A) DOES THE VETERAN NOW HAVE OR HAS HE/SHE EVER BEEN DIAGNOSED WITH A THORACOLUMBAR SPINE (back) CONDITION?<br><br>
+<p>A. DOES THE VETERAN NOW HAVE OR HAS HE/SHE EVER BEEN DIAGNOSED WITH A THORACOLUMBAR SPINE (back) CONDITION?<br><br>
 <label><input type="radio" name="s1qa" value="YES">YES</label>
 <label><input type="radio" name="s1qa" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
-<p>B) PROVIDE ONLY DIAGNOSIS THAT PERTAIN TO THORACOLUMBAR SPINE (back) CONDITIONS<br><br>
+<p>B. PROVIDE ONLY DIAGNOSIS THAT PERTAIN TO THORACOLUMBAR SPINE (back) CONDITIONS<br><br>
 <textarea name="s1qb"></textarea>
 </p>
 </div>
 <div class="inner-wrap">
-<p>C) IF THERE ARE ADDITIONAL DIAGNOSES THAT PERTAIN TO THORACOLUMBAR SPINE (back) CONDITIONS, LIST USING ABOVE FORMAT<br><br>
+<p>C. IF THERE ARE ADDITIONAL DIAGNOSES THAT PERTAIN TO THORACOLUMBAR SPINE (back) CONDITIONS, LIST USING ABOVE FORMAT<br><br>
 <textarea name="s1qc"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>2</span>Medical History</div><br>
 <div class="inner-wrap">
-<p>A) DESCRIBE THE HISTORY (including onset and course) OF THE VETERAN'S THORACOLUMBAR SPINE (back) CONDITION (brief summary)<br><br>
+<p>A. DESCRIBE THE HISTORY (including onset and course) OF THE VETERAN'S THORACOLUMBAR SPINE (back) CONDITION (brief summary)<br><br>
 <textarea name="s2qa"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>3</span>FLARE-UPS</div><br>
 <div class="inner-wrap">
-<p>A) DOES THE VETERAN REPORT THAT FLARE-UPS IMPACT THE FUNCTION OF THE THORACOLUMBAR SPINE (back)?<br><br>
+<p>A. DOES THE VETERAN REPORT THAT FLARE-UPS IMPACT THE FUNCTION OF THE THORACOLUMBAR SPINE (back)?<br><br>
 <label><input type="radio" name="s3qa" value="YES">YES</label>
 <label><input type="radio" name="s3qa" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
-<p>B) IF YES, DOCUMENT THE VETERAN'S DESCRIPTION OF THE IMPACT OF FLARE-UPS IN HIS OR HER OWN WORDS<br><br>
+<p>B. IF YES, DOCUMENT THE VETERAN'S DESCRIPTION OF THE IMPACT OF FLARE-UPS IN HIS OR HER OWN WORDS<br><br>
 <textarea name="s3qb"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>4</span>INITIAL RANGE OF MOTION (ROM) MEASUREMENTS</div><br>
 <div class="inner-wrap">
-<p>A1) SELECT WHERE FORWARD FLEXION ENDS (normal endpoint is 90)<br><br>
+<p>A. SAMPLE PARENT QUESTION TEXT<br><br>
+</p>
+</div>
+<div class="inner-wrap-alt">
+<p>A1. SELECT WHERE FORWARD FLEXION ENDS (normal endpoint is 90)<br><br>
 <select name="s4qa1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -74,8 +78,8 @@
 </select>
 </p>
 </div>
-<div class="inner-wrap">
-<p>A2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<div class="inner-wrap-alt">
+<p>A2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
 <select name="s4qa2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -99,8 +103,9 @@
 </select>
 </p>
 </div>
-<div class="inner-wrap">
-<p>B1) SELECT WHERE EXTENSION ENDS (normal endpoint is 30)<br><br>
+<div class="question-holder"><p>B. <br><br>
+</div><div class="inner-wrap-alt">
+<p>B1. SELECT WHERE EXTENSION ENDS (normal endpoint is 30)<br><br>
 <select name="s4qb1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -112,8 +117,8 @@
 </select>
 </p>
 </div>
-<div class="inner-wrap">
-<p>B2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<div class="inner-wrap-alt">
+<p>B2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
 <select name="s4qb2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -125,8 +130,9 @@
 </select>
 </p>
 </div>
-<div class="inner-wrap">
-<p>C1) SELECT WHERE RIGHT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
+<div class="question-holder"><p>C. <br><br>
+</div><div class="inner-wrap-alt">
+<p>C1. SELECT WHERE RIGHT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
 <select name="s4qc1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -138,8 +144,8 @@
 </select>
 </p>
 </div>
-<div class="inner-wrap">
-<p>C2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<div class="inner-wrap-alt">
+<p>C2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
 <select name="s4qc2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -151,8 +157,9 @@
 </select>
 </p>
 </div>
-<div class="inner-wrap">
-<p>D1) SELECT WHERE LEFT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
+<div class="question-holder"><p>D. <br><br>
+</div><div class="inner-wrap-alt">
+<p>D1. SELECT WHERE LEFT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
 <select name="s4qd1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -164,8 +171,8 @@
 </select>
 </p>
 </div>
-<div class="inner-wrap">
-<p>D2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<div class="inner-wrap-alt">
+<p>D2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
 <select name="s4qd2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -177,8 +184,9 @@
 </select>
 </p>
 </div>
-<div class="inner-wrap">
-<p>E1) SELECT WHERE RIGHT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
+<div class="question-holder"><p>E. <br><br>
+</div><div class="inner-wrap-alt">
+<p>E1. SELECT WHERE RIGHT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
 <select name="s4qe1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -190,8 +198,8 @@
 </select>
 </p>
 </div>
-<div class="inner-wrap">
-<p>E2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<div class="inner-wrap-alt">
+<p>E2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
 <select name="s4qe2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -203,8 +211,9 @@
 </select>
 </p>
 </div>
-<div class="inner-wrap">
-<p>F1) SELECT WHERE LEFT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
+<div class="question-holder"><p>F. <br><br>
+</div><div class="inner-wrap-alt">
+<p>F1. SELECT WHERE LEFT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
 <select name="s4qf1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -216,8 +225,8 @@
 </select>
 </p>
 </div>
-<div class="inner-wrap">
-<p>F2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<div class="inner-wrap-alt">
+<p>F2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
 <select name="s4qf2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -230,7 +239,7 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>G) IF ROM FOR THIS VETERAN DOES NOT CONFORM TO THE NORMAL RANGE OF MOTION IDENTIFIED ABOVE BUT IS NORMAL FOR THIS
+<p>G. IF ROM FOR THIS VETERAN DOES NOT CONFORM TO THE NORMAL RANGE OF MOTION IDENTIFIED ABOVE BUT IS NORMAL FOR THIS
 VETERAN (for reasons other than a back condition, such as age, body habitus, neurologic disease), EXPLAIN<br><br>
 <textarea name="s4qg"></textarea>
 </p>
@@ -238,45 +247,34 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 <br><hr><br>
 <div class="section"><span>5</span>ROM MEASUREMENT AFTER REPETITIVE-USE TESTING</div><br>
 <div class="inner-wrap">
-<p>A) SELECT WHERE POST-TEST FORWARD FLEXION ENDS<br><br>
-<select name="s5qa">
-<option value="0">0</option>
-<option value="5">5</option>
-<option value="10">10</option>
-<option value="15">15</option>
-<option value="20">20</option>
-<option value="25">25</option>
-<option value="30">30</option>
-<option value="35">35</option>
-<option value="40">40</option>
-<option value="45">45</option>
-<option value="50">50</option>
-<option value="55">55</option>
-<option value="60">60</option>
-<option value="65">65</option>
-<option value="70">70</option>
-<option value="75">75</option>
-<option value="80">80</option>
-<option value="85">85</option>
-<option value=">=90">>=90</option>
-</select>
+<p>A. SELECT WHERE POST-TEST FORWARD FLEXION ENDS<br><br>
+<label><input type="checkbox" name="s5qa" value="0">0</label>
+<label><input type="checkbox" name="s5qa" value="5">5</label>
+<label><input type="checkbox" name="s5qa" value="10">10</label>
+<label><input type="checkbox" name="s5qa" value="15">15</label>
+<label><input type="checkbox" name="s5qa" value="20">20</label>
+<label><input type="checkbox" name="s5qa" value="25">25</label>
+<label><input type="checkbox" name="s5qa" value="30">30</label>
+<label><input type="checkbox" name="s5qa" value="35">35</label>
+<label><input type="checkbox" name="s5qa" value="40">40</label>
+<label><input type="checkbox" name="s5qa" value="45">45</label>
+<label><input type="checkbox" name="s5qa" value="50">50</label>
+<label><input type="checkbox" name="s5qa" value="55">55</label>
+<label><input type="checkbox" name="s5qa" value="60">60</label>
+<label><input type="checkbox" name="s5qa" value="65">65</label>
+<label><input type="checkbox" name="s5qa" value="70">70</label>
+<label><input type="checkbox" name="s5qa" value="75">75</label>
+<label><input type="checkbox" name="s5qa" value="80">80</label>
+<label><input type="checkbox" name="s5qa" value="85">85</label>
+<label><input type="checkbox" name="s5qa" value=">=90">>=90</label>
 </p>
 </div>
 <div class="inner-wrap">
-<p>B) SELECT WHERE POST-TEST EXTENSION ENDS:<br><br>
-<select name="s5qb">
-<option value="0">0</option>
-<option value="5">5</option>
-<option value="10">10</option>
-<option value="15">15</option>
-<option value="20">20</option>
-<option value="25">25</option>
-<option value=">=30">>=30</option>
-</select>
+<p>B. SELECT WHERE POST-TEST EXTENSION ENDS:<br><br>
 </p>
 </div>
 <div class="inner-wrap">
-<p>C) SELECT WHERE POST-TEST RIGHT LATERAL FLEXION ENDS<br><br>
+<p>C. SELECT WHERE POST-TEST RIGHT LATERAL FLEXION ENDS<br><br>
 <select name="s5qc">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -289,33 +287,17 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 </p>
 </div>
 <div class="inner-wrap">
-<p>D) SELECT WHERE POST-TEST LEFT LATERAL FLEXION ENDS<br><br>
-<select name="s5qd">
-<option value="0">0</option>
-<option value="5">5</option>
-<option value="10">10</option>
-<option value="15">15</option>
-<option value="20">20</option>
-<option value="25">25</option>
-<option value=">=30">>=30</option>
-</select>
+<p>D. SELECT WHERE POST-TEST LEFT LATERAL FLEXION ENDS<br><br>
+<label><input type="radio" name="s5qd" value="YES">YES</label>
+<label><input type="radio" name="s5qd" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
-<p>E) SELECT WHERE POST-TEST RIGHT LATERAL ROTATION ENDS<br><br>
-<select name="s5qe">
-<option value="0">0</option>
-<option value="5">5</option>
-<option value="10">10</option>
-<option value="15">15</option>
-<option value="20">20</option>
-<option value="25">25</option>
-<option value=">=30">>=30</option>
-</select>
+<p>E. SELECT WHERE POST-TEST RIGHT LATERAL ROTATION ENDS<br><br>
 </p>
 </div>
 <div class="inner-wrap">
-<p>F) SELECT WHERE POST-TEST LEFT LATERAL ROTATION ENDS<br><br>
+<p>F. SELECT WHERE POST-TEST LEFT LATERAL ROTATION ENDS<br><br>
 <select name="s5qf">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -330,58 +312,38 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 <br><hr><br>
 <div class="section"><span>6</span>FUNCTIONAL LOSS AND ADDITIONAL LIMITATION IN ROM</div><br>
 <div class="inner-wrap">
-<p>A) DOES THE VETERAN HAVE ADDITIONAL LIMITATION IN ROM OF THE THORACOLUMBAR SPINE (back) FOLLOWING REPETITIVE-USE TESTING?<br><br>
+<p>A. DOES THE VETERAN HAVE ADDITIONAL LIMITATION IN ROM OF THE THORACOLUMBAR SPINE (back) FOLLOWING REPETITIVE-USE TESTING?<br><br>
 <label><input type="radio" name="s6qa" value="YES">YES</label>
 <label><input type="radio" name="s6qa" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
-<p>B) DOES THE VETERAN HAVE ANY FUNCTIONAL LOSS AND/OR FUNCTIONAL IMPAIRMENT OF THE THORACOLUMBAR SPINE (back)?<br><br>
+<p>B. DOES THE VETERAN HAVE ANY FUNCTIONAL LOSS AND/OR FUNCTIONAL IMPAIRMENT OF THE THORACOLUMBAR SPINE (back)?<br><br>
 <label><input type="radio" name="s6qb" value="YES">YES</label>
 <label><input type="radio" name="s6qb" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
-<p>C) IF THE VETERAN HAS FUNCTIONAL LOSS, FUNCTIONAL IMPAIRMENT AND/OR ADDITIONAL LIMITATION OF ROM OF THE THORACOLUMBAR SPINE (back) AFTER REPETITIVE USE, INDICATE THE CONTRIBUTING FACTORS OF DISABILITY BELOW:<br><br>
+<p>C. IF THE VETERAN HAS FUNCTIONAL LOSS, FUNCTIONAL IMPAIRMENT AND/OR ADDITIONAL LIMITATION OF ROM OF THE THORACOLUMBAR SPINE (back) AFTER REPETITIVE USE, INDICATE THE CONTRIBUTING FACTORS OF DISABILITY BELOW:<br><br>
 <textarea name="s6qc"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>7</span>PAIN AND MUSCLE SPASM</div><br>
 <div class="inner-wrap">
-<p>A) DOES THE VETERAN HAVE LOCALIZED TENDERNESS OR PAIN TO PALPATION FOR JOINTS AND/OR SOFT TISSUE OF THE THORACOLUMBAR SPINE (back)?<br><br>
+<p>A. DOES THE VETERAN HAVE LOCALIZED TENDERNESS OR PAIN TO PALPATION FOR JOINTS AND/OR SOFT TISSUE OF THE THORACOLUMBAR SPINE (back)?<br><br>
 <label><input type="radio" name="s7qa" value="YES">YES</label>
 <label><input type="radio" name="s7qa" value="NO">NO</label>
 </p>
 </div>
-<div class="inner-wrap">
-<p>B) <br><br>
-<textarea name="s7qb"></textarea>
-</p>
-</div>
-<br><hr><br>
+<div class="question-holder"><p>B. <br><br>
+</div><br><hr><br>
 <div class="section"><span>8</span>MUSCLE STRENGTH TESTING</div><br>
-<div class="inner-wrap">
-<p>A1) <br><br>
-<textarea name="s8qa1"></textarea>
-</p>
-</div>
-<div class="inner-wrap">
-<p>A2) <br><br>
-<textarea name="s8qa2"></textarea>
-</p>
-</div>
-<div class="inner-wrap">
-<p>A3) <br><br>
-<textarea name="s8qa3"></textarea>
-</p>
-</div>
-<div class="inner-wrap">
-<p>B) <br><br>
-<textarea name="s8qb"></textarea>
-</p>
-</div>
-<br><br>
+<div class="question-holder"><p>A. <br><br>
+</div><div class="question-holder"><p>A1. <br><br>
+</div><div class="question-holder"><p>A2. <br><br>
+</div><div class="question-holder"><p>B. <br><br>
+</div><br><br>
 <div class="button-section"><input type="submit" value="Submit"/></div>
 </form>
 </div>
