--- a/test/test.html
+++ b/test/test.html
@@ -12,49 +12,56 @@
 <form action="" method="post" id="form">
 <div class="section"><span>1</span>Diagnosis</div><br>
 <div class="inner-wrap">
-<p>A. DOES THE VETERAN NOW HAVE OR HAS HE/SHE EVER BEEN DIAGNOSED WITH A THORACOLUMBAR SPINE (back) CONDITION?<br><br>
+<p>A) DOES THE VETERAN NOW HAVE OR HAS HE/SHE EVER BEEN DIAGNOSED WITH A THORACOLUMBAR SPINE (back) CONDITION?
+<br><br>
 <label><input type="radio" name="s1qa" value="YES">YES</label>
 <label><input type="radio" name="s1qa" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
-<p>B. PROVIDE ONLY DIAGNOSIS THAT PERTAIN TO THORACOLUMBAR SPINE (back) CONDITIONS<br><br>
+<p>B) PROVIDE ONLY DIAGNOSIS THAT PERTAIN TO THORACOLUMBAR SPINE (back) CONDITIONS
+<br><br>
 <textarea name="s1qb"></textarea>
 </p>
 </div>
 <div class="inner-wrap">
-<p>C. IF THERE ARE ADDITIONAL DIAGNOSES THAT PERTAIN TO THORACOLUMBAR SPINE (back) CONDITIONS, LIST USING ABOVE FORMAT<br><br>
+<p>C) IF THERE ARE ADDITIONAL DIAGNOSES THAT PERTAIN TO THORACOLUMBAR SPINE (back) CONDITIONS, LIST USING ABOVE FORMAT
+<br><br>
 <textarea name="s1qc"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>2</span>Medical History</div><br>
 <div class="inner-wrap">
-<p>A. DESCRIBE THE HISTORY (including onset and course) OF THE VETERAN'S THORACOLUMBAR SPINE (back) CONDITION (brief summary)<br><br>
+<p>A) DESCRIBE THE HISTORY (including onset and course) OF THE VETERAN'S THORACOLUMBAR SPINE (back) CONDITION (brief summary)
+<br><br>
 <textarea name="s2qa"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>3</span>FLARE-UPS</div><br>
 <div class="inner-wrap">
-<p>A. DOES THE VETERAN REPORT THAT FLARE-UPS IMPACT THE FUNCTION OF THE THORACOLUMBAR SPINE (back)?<br><br>
+<p>A) DOES THE VETERAN REPORT THAT FLARE-UPS IMPACT THE FUNCTION OF THE THORACOLUMBAR SPINE (back)?
+<br><br>
 <label><input type="radio" name="s3qa" value="YES">YES</label>
 <label><input type="radio" name="s3qa" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
-<p>B. IF YES, DOCUMENT THE VETERAN'S DESCRIPTION OF THE IMPACT OF FLARE-UPS IN HIS OR HER OWN WORDS<br><br>
+<p>B) IF YES, DOCUMENT THE VETERAN'S DESCRIPTION OF THE IMPACT OF FLARE-UPS IN HIS OR HER OWN WORDS
+<br><br>
 <textarea name="s3qb"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>4</span>INITIAL RANGE OF MOTION (ROM) MEASUREMENTS</div><br>
 <div class="inner-wrap">
-<p>A. SAMPLE PARENT QUESTION TEXT<br><br>
+<p>A) SAMPLE PARENT QUESTION TEXT
 </p>
 </div>
 <div class="inner-wrap-alt">
-<p>A1. SELECT WHERE FORWARD FLEXION ENDS (normal endpoint is 90)<br><br>
+<p>A1) SELECT WHERE FORWARD FLEXION ENDS (normal endpoint is 90)
+<br><br>
 <select name="s4qa1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -79,7 +86,8 @@
 </p>
 </div>
 <div class="inner-wrap-alt">
-<p>A2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<p>A2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS
+<br><br>
 <select name="s4qa2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -103,9 +111,11 @@
 </select>
 </p>
 </div>
-<div class="question-holder"><p>B. <br><br>
+<div class="question-holder"><p>B) 
+</p>
 </div><div class="inner-wrap-alt">
-<p>B1. SELECT WHERE EXTENSION ENDS (normal endpoint is 30)<br><br>
+<p>B1) SELECT WHERE EXTENSION ENDS (normal endpoint is 30)
+<br><br>
 <select name="s4qb1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -118,7 +128,8 @@
 </p>
 </div>
 <div class="inner-wrap-alt">
-<p>B2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<p>B2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS
+<br><br>
 <select name="s4qb2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -130,9 +141,11 @@
 </select>
 </p>
 </div>
-<div class="question-holder"><p>C. <br><br>
+<div class="question-holder"><p>C) 
+</p>
 </div><div class="inner-wrap-alt">
-<p>C1. SELECT WHERE RIGHT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
+<p>C1) SELECT WHERE RIGHT LATERAL FLEXION ENDS (normal endpoint is 30)
+<br><br>
 <select name="s4qc1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -145,7 +158,8 @@
 </p>
 </div>
 <div class="inner-wrap-alt">
-<p>C2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<p>C2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS
+<br><br>
 <select name="s4qc2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -157,9 +171,11 @@
 </select>
 </p>
 </div>
-<div class="question-holder"><p>D. <br><br>
+<div class="question-holder"><p>D) 
+</p>
 </div><div class="inner-wrap-alt">
-<p>D1. SELECT WHERE LEFT LATERAL FLEXION ENDS (normal endpoint is 30)<br><br>
+<p>D1) SELECT WHERE LEFT LATERAL FLEXION ENDS (normal endpoint is 30)
+<br><br>
 <select name="s4qd1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -172,7 +188,8 @@
 </p>
 </div>
 <div class="inner-wrap-alt">
-<p>D2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<p>D2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS
+<br><br>
 <select name="s4qd2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -184,9 +201,11 @@
 </select>
 </p>
 </div>
-<div class="question-holder"><p>E. <br><br>
+<div class="question-holder"><p>E) 
+</p>
 </div><div class="inner-wrap-alt">
-<p>E1. SELECT WHERE RIGHT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
+<p>E1) SELECT WHERE RIGHT LATERAL ROTATION ENDS (normal endpoint is 30)
+<br><br>
 <select name="s4qe1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -199,7 +218,8 @@
 </p>
 </div>
 <div class="inner-wrap-alt">
-<p>E2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<p>E2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS
+<br><br>
 <select name="s4qe2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -211,9 +231,11 @@
 </select>
 </p>
 </div>
-<div class="question-holder"><p>F. <br><br>
+<div class="question-holder"><p>F) 
+</p>
 </div><div class="inner-wrap-alt">
-<p>F1. SELECT WHERE LEFT LATERAL ROTATION ENDS (normal endpoint is 30)<br><br>
+<p>F1) SELECT WHERE LEFT LATERAL ROTATION ENDS (normal endpoint is 30)
+<br><br>
 <select name="s4qf1">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -226,7 +248,8 @@
 </p>
 </div>
 <div class="inner-wrap-alt">
-<p>F2. SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS<br><br>
+<p>F2) SELECT WHERE OBJECTIVE EVIDENCE OF PAINFUL MOTION BEGINS
+<br><br>
 <select name="s4qf2">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -239,15 +262,17 @@
 </p>
 </div>
 <div class="inner-wrap">
-<p>G. IF ROM FOR THIS VETERAN DOES NOT CONFORM TO THE NORMAL RANGE OF MOTION IDENTIFIED ABOVE BUT IS NORMAL FOR THIS
-VETERAN (for reasons other than a back condition, such as age, body habitus, neurologic disease), EXPLAIN<br><br>
+<p>G) IF ROM FOR THIS VETERAN DOES NOT CONFORM TO THE NORMAL RANGE OF MOTION IDENTIFIED ABOVE BUT IS NORMAL FOR THIS
+VETERAN (for reasons other than a back condition, such as age, body habitus, neurologic disease), EXPLAIN
+<br><br>
 <textarea name="s4qg"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>5</span>ROM MEASUREMENT AFTER REPETITIVE-USE TESTING</div><br>
 <div class="inner-wrap">
-<p>A. SELECT WHERE POST-TEST FORWARD FLEXION ENDS<br><br>
+<p>A) SELECT WHERE POST-TEST FORWARD FLEXION ENDS
+<br><br>
 <label><input type="checkbox" name="s5qa" value="0">0</label>
 <label><input type="checkbox" name="s5qa" value="5">5</label>
 <label><input type="checkbox" name="s5qa" value="10">10</label>
@@ -270,11 +295,13 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 </p>
 </div>
 <div class="inner-wrap">
-<p>B. SELECT WHERE POST-TEST EXTENSION ENDS:<br><br>
+<p>B) SELECT WHERE POST-TEST EXTENSION ENDS:
+<br><br>
 </p>
 </div>
 <div class="inner-wrap">
-<p>C. SELECT WHERE POST-TEST RIGHT LATERAL FLEXION ENDS<br><br>
+<p>C) SELECT WHERE POST-TEST RIGHT LATERAL FLEXION ENDS
+<br><br>
 <select name="s5qc">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -287,17 +314,20 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 </p>
 </div>
 <div class="inner-wrap">
-<p>D. SELECT WHERE POST-TEST LEFT LATERAL FLEXION ENDS<br><br>
+<p>D) SELECT WHERE POST-TEST LEFT LATERAL FLEXION ENDS
+<br><br>
 <label><input type="radio" name="s5qd" value="YES">YES</label>
 <label><input type="radio" name="s5qd" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
-<p>E. SELECT WHERE POST-TEST RIGHT LATERAL ROTATION ENDS<br><br>
+<p>E) SELECT WHERE POST-TEST RIGHT LATERAL ROTATION ENDS
+<br><br>
 </p>
 </div>
 <div class="inner-wrap">
-<p>F. SELECT WHERE POST-TEST LEFT LATERAL ROTATION ENDS<br><br>
+<p>F) SELECT WHERE POST-TEST LEFT LATERAL ROTATION ENDS
+<br><br>
 <select name="s5qf">
 <option value="0">0</option>
 <option value="5">5</option>
@@ -312,37 +342,67 @@ VETERAN (for reasons other than a back condition, such as age, body habitus, neu
 <br><hr><br>
 <div class="section"><span>6</span>FUNCTIONAL LOSS AND ADDITIONAL LIMITATION IN ROM</div><br>
 <div class="inner-wrap">
-<p>A. DOES THE VETERAN HAVE ADDITIONAL LIMITATION IN ROM OF THE THORACOLUMBAR SPINE (back) FOLLOWING REPETITIVE-USE TESTING?<br><br>
+<p>A) DOES THE VETERAN HAVE ADDITIONAL LIMITATION IN ROM OF THE THORACOLUMBAR SPINE (back) FOLLOWING REPETITIVE-USE TESTING?
+<br><br>
 <label><input type="radio" name="s6qa" value="YES">YES</label>
 <label><input type="radio" name="s6qa" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
-<p>B. DOES THE VETERAN HAVE ANY FUNCTIONAL LOSS AND/OR FUNCTIONAL IMPAIRMENT OF THE THORACOLUMBAR SPINE (back)?<br><br>
+<p>B) DOES THE VETERAN HAVE ANY FUNCTIONAL LOSS AND/OR FUNCTIONAL IMPAIRMENT OF THE THORACOLUMBAR SPINE (back)?
+<br><br>
 <label><input type="radio" name="s6qb" value="YES">YES</label>
 <label><input type="radio" name="s6qb" value="NO">NO</label>
 </p>
 </div>
 <div class="inner-wrap">
-<p>C. IF THE VETERAN HAS FUNCTIONAL LOSS, FUNCTIONAL IMPAIRMENT AND/OR ADDITIONAL LIMITATION OF ROM OF THE THORACOLUMBAR SPINE (back) AFTER REPETITIVE USE, INDICATE THE CONTRIBUTING FACTORS OF DISABILITY BELOW:<br><br>
+<p>C) IF THE VETERAN HAS FUNCTIONAL LOSS, FUNCTIONAL IMPAIRMENT AND/OR ADDITIONAL LIMITATION OF ROM OF THE THORACOLUMBAR SPINE (back) AFTER REPETITIVE USE, INDICATE THE CONTRIBUTING FACTORS OF DISABILITY BELOW:
+<br><br>
 <textarea name="s6qc"></textarea>
 </p>
 </div>
 <br><hr><br>
 <div class="section"><span>7</span>PAIN AND MUSCLE SPASM</div><br>
 <div class="inner-wrap">
-<p>A. DOES THE VETERAN HAVE LOCALIZED TENDERNESS OR PAIN TO PALPATION FOR JOINTS AND/OR SOFT TISSUE OF THE THORACOLUMBAR SPINE (back)?<br><br>
+<p>A) DOES THE VETERAN HAVE LOCALIZED TENDERNESS OR PAIN TO PALPATION FOR JOINTS AND/OR SOFT TISSUE OF THE THORACOLUMBAR SPINE (back)?
+<br><br>
 <label><input type="radio" name="s7qa" value="YES">YES</label>
 <label><input type="radio" name="s7qa" value="NO">NO</label>
 </p>
 </div>
-<div class="question-holder"><p>B. <br><br>
-</div><br><hr><br>
+<div class="question-holder"><p>B) 
+</p>
+</div><div class="inner-wrap-alt">
+<p>B1) DOES THE VETERAN HAVE GUARDING OR MUSCLE SPASM OF THE THORACOLUMBAR SPINE (back)?
+<br><br>
+<label><input type="radio" name="s7qb1" value="YES">YES</label>
+<label><input type="radio" name="s7qb1" value="NO">NO</label>
+</p>
+</div>
+<div class="inner-wrap-alt">
+<p>B2) 
+<br><br>
+<textarea name="s7qb2"></textarea>
+</p>
+</div>
+<br><hr><br>
 <div class="section"><span>8</span>MUSCLE STRENGTH TESTING</div><br>
-<div class="question-holder"><p>A. <br><br>
-</div><div class="question-holder"><p>A1. <br><br>
-</div><div class="question-holder"><p>A2. <br><br>
-</div><div class="question-holder"><p>B. <br><br>
+<div class="question-holder"><p>A) 
+</p>
+</div><div class="inner-wrap-alt">
+<p>A1) 
+<br><br>
+<textarea name="s8qa1"></textarea>
+</p>
+</div>
+<div class="inner-wrap-alt">
+<p>A2) 
+<br><br>
+<textarea name="s8qa2"></textarea>
+</p>
+</div>
+<div class="question-holder"><p>B) 
+</p>
 </div><br><br>
 <div class="button-section"><input type="submit" value="Submit"/></div>
 </form>
