section text handling

--- a/test/test.html
+++ b/test/test.html
@@ -10,7 +10,7 @@
 <div class="bmir-style">
 <h1>DBQ Form<span>Please answer all questions and submit your answers at the end</span></h1><br>
 <form action="" method="post" id="form">
-<div class="section"><span>1</span>Diagnosis</div><br>
+<div class="section"><span>1</span>Diagnosis</div><p>sample initial section text</p><br>
 <div class="inner-wrap">
 <p>A) DOES THE VETERAN NOW HAVE OR HAS HE/SHE EVER BEEN DIAGNOSED WITH A THORACOLUMBAR SPINE (back) CONDITION?
 <br><br>
@@ -54,9 +54,9 @@
 </p>
 </div>
 <br><hr><br>
-<div class="section"><span>4</span>INITIAL RANGE OF MOTION (ROM) MEASUREMENTS</div><br>
+<div class="section"><span>4</span>INITIAL RANGE OF MOTION (ROM) MEASUREMENTS</div><p>NOTE: Following the inital assessment of ROM, perform repetivie-use testing. For VA purposes, repetivie-use testing must be included in all exams. The VA has determined that 3 repetitions of ROM (at minimum) can serve as a representative test of the effect of repetivie use. After the initial measurement, reassess ROM after 3 repetitions. Report post-test measurements in section 5.</p><br>
 <div class="inner-wrap">
-<p>A) SAMPLE PARENT QUESTION TEXT
+<p>A) MEASURE ROM WITH A GONIOMETER, ROUNDING EACH MEASUREMENT TO THE NEAREST 5 DEGREES. DURING THE MEASUREMENTS, OBSERVE THE POINT AT WHICH PAINFUL MOTION BEGINS, EVIDENCE BY VISIBLE BEHAVIOUR SUCH AS FACIAL EXPRESSION, WINCING, ETC. REPORT INITIAL MEASUREMENTS BELOW.
 </p>
 </div>
 <div class="inner-wrap-alt">
