--- a/test/test.html
+++ b/test/test.html
@@ -9,7 +9,7 @@
 <body>
 <div class="bmir-style">
 <h1>DBQ Form<span>Please answer all questions and submit your answers at the end</span></h1><br>
-<form action="" method="post" id="form">
+<form action="processInput" method="post" id="form">
 <div class="section"><span>1</span>Diagnosis</div><p>sample initial section text</p><br>
 <div class="inner-wrap">
 <p>A) DOES THE VETERAN NOW HAVE OR HAS HE/SHE EVER BEEN DIAGNOSED WITH A THORACOLUMBAR SPINE (back) CONDITION?
