--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,6 +4,7 @@
 		<title>Form Generator</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="style/style.css">
+		<link rel="icon" type="image/png" href="style/favicon.ico"/>
 		<link href="http://fonts.googleapis.com/css?family=Bitter" rel="stylesheet" type="text/css">
 	</head>
 	<body>
