--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,7 +17,7 @@
 				<br>
 				<div class="button-section">
 					<input type="submit" name="generate" value="Generate form" onclick="document.getElementById('loader').style.display='inline';this.value='Generating...';this.disabled=true;this.form.submit();"/>&nbsp;
-					<img id="loader" src="style/loader1.gif" style="display:none;vertical-align:middle;"/>
+					<img id="loader" src="style/loader.gif" style="display:none;vertical-align:middle;"/>
 				</div>
 			</form>
 		</div>
