--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,13 +9,22 @@
 	</head>
 	<body>
 		<div class="bmir-style">
-			<h1>Form Generator<span>Upload configuration file and generate a form</span></h1>
+			<h1>Form Generator<span>Choose or upload a configuration file to generate a form</span></h1>
+			<p>Select a pre-generated form / configuration file:</p><br>
+			<div>
+				<input width="300px" type="submit" name="generate" value="VA Back DBQ" 
+					onclick="document.getElementById('loader1').style.display='inline';this.value='Loading...';this.disabled=true;window.location.href='form?conf=https://raw.github.com/protegeproject/facsimile/master/conf/conf.xml'"/>
+				<input width="300px" type="submit" name="generate" value="VA TBI DBQ" 
+					onclick="document.getElementById('loader1').style.display='inline';this.value='Loading...';this.disabled=true;window.location.href='form?conf=conf.xml'"/>
+				<img id="loader1" src="style/loader.gif" style="display:none;vertical-align:middle;"/>
+			</div>
+			<br><hr>
 			<form action="form" enctype="multipart/form-data" method="post">
-				<p>Choose configuration file: &nbsp;
+				<p>Alternatively, upload your own configuration file: &nbsp;<br><br>
 					<input type="file" name="conf">
 				</p>
 				<br>
-				<div class="button-section">
+				<div>
 					<input type="submit" name="generate" value="Generate form" onclick="document.getElementById('loader').style.display='inline';this.value='Generating...';this.disabled=true;this.form.submit();"/>&nbsp;
 					<img id="loader" src="style/loader.gif" style="display:none;vertical-align:middle;"/>
 				</div>
