--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,7 +15,7 @@
 				<input width="300px" type="submit" name="generate" value="VA Back DBQ" 
 					onclick="document.getElementById('loader1').style.display='inline';this.value='Loading...';this.disabled=true;window.location.href='form?conf=https://raw.github.com/protegeproject/facsimile/master/conf/conf.xml'"/>
 				<input width="300px" type="submit" name="generate" value="VA TBI DBQ" 
-					onclick="document.getElementById('loader1').style.display='inline';this.value='Loading...';this.disabled=true;window.location.href='form?conf=conf.xml'"/>
+					onclick="document.getElementById('loader1').style.display='inline';this.value='Loading...';this.disabled=true;window.location.href='form?conf=conf-dbq-back.xml'"/>
 				<img id="loader1" src="style/loader.gif" style="display:none;vertical-align:middle;"/>
 			</div>
 			<br><hr>
