--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,6 +16,8 @@
 					onclick="document.getElementById('loader1').style.display='inline';this.value='Loading...';this.disabled=true;window.location.href='form?conf=conf-dbq-back.xml'"/>
 				<input width="300px" type="submit" name="generate" value="VA TBI DBQ" 
 					onclick="document.getElementById('loader1').style.display='inline';this.value='Loading...';this.disabled=true;window.location.href='form?conf=conf-dbq-tbi.xml'"/>
+				<input width="300px" type="submit" name="generate" value="Example Form" 
+					onclick="document.getElementById('loader1').style.display='inline';this.value='Loading...';this.disabled=true;window.location.href='form?conf=conf-example.xml'"/>
 				<img id="loader1" src="style/loader.gif" style="display:none;vertical-align:middle;"/>
 			</div>
 			<br><hr>
